Update service S3 e SQS